--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ hr {
 }
 /* 放照片 */
 .parallaxTop {
-  background-image: url("https://www.msn.com/zh-tw/news/national/%E5%8B%B8%E7%BF%92%E5%88%A5%E5%9C%A8%E5%8F%B0%E6%B5%B7%E6%8C%91%E9%87%81-%E5%B8%83%E6%9E%97%E8%82%AF-%E5%8F%B0%E6%9C%89%E4%BA%8B%E5%85%A8%E7%90%83%E6%9C%89%E4%BA%8B/ar-AA1cN3nu?ocid=hpmsn&cvid=7d1bee2aad164cf9bea004d230bc4dbe&ei=28&fullscreen=true#image=1");
+  background-image: url("1.png");
   min-height: 100vh;
 }
 
